# litt-utils

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
docs/: index.md
src/litt-utils/: get_tracklets_from_edges.py  sort_track_ids_by_tree_order.py
src/litt_utils/: get_tracklets_from_edges.py  sort_track_ids_by_tree_order.py
